--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,7 +9,14 @@ body{
 header{
     background-color: black;
     color:#fff;
+}
+
+
     
-    
+
+.grass{
+    background-image: url(/assets/Images/image\ 1.png);
+    background-position: center;
+    background-size: contain;
     
 }
