It will add css property of background color,text colorand align text to the center in the reviews class.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -20,3 +20,8 @@ header{
     background-size: contain;
     
 }
+.reviews{
+    background-color: black;
+    color: #fff;
+    text-align: center;
+}
