--- a/styles.css
+++ b/styles.css
@@ -268,6 +268,15 @@ h2{
     border-bottom:1px solid black;
     padding-bottom: 10px;
 }
+.media{
+    width: 3vw;
+    height: 4vh;
+    border-radius: 50% ;
+}
+.store{
+    width: 8vw;
+    border-radius: 10%;
+}
 #others{
     font-weight: bold;
   
